Added mechanism for updating Production Rate on the server
Added method UpdateProductionRate for updating the Device Production Rate with the Desired Device Twin value, this method will be later used for Emergency Stop Direct Method

--- a/OpcAgent.Device/OpcAgent.Device.csproj
+++ b/OpcAgent.Device/OpcAgent.Device.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.0" />
+    <PackageReference Include="Opc.UaFx.Client" Version="2.29.0" />
   </ItemGroup>
 
 </Project>
