--- a/OpcAgent.Console/OpcAgent.Console.csproj
+++ b/OpcAgent.Console/OpcAgent.Console.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.39.1" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.0" />
     <PackageReference Include="Opc.UaFx.Client" Version="2.29.0" />
   </ItemGroup>
